# Maze

materials/caves/: bad_data.txt  cave1.txt  negative_cols.txt  negative_rows.txt
materials/mazes/: bad_bottom_walls.txt  bad_right_walls.txt  negative_cols.txt  negative_rows.txt  saved_cave_test.txt  test_pathfinder.txt
src/: CMakeLists.txt  Doxyfile  Makefile  main.cc
src/Controller/: controller.cc  controller.h
src/Model/: data_types.h  file_manager.h  generator.h  model.cc  model.cpp  model.h
src/Model/Cave/: cave.cc  cave.h
src/Model/FileReader/: filereader.cc  filereader.h
src/Model/Maze/: generate.cc  generate.h  maze.cc  maze.h  maze_generator.cc  maze_generator.h  path_finder.cc  path_finder.h
src/View/: animation.cc  events.cc  init_view.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  mazewidget.cc  mazewidget.h  mazewidget.ui
src/View/CavePainter/: cavepainter.cc  cavepainter.h
src/View/MazePainter/: mazepainter.cc  mazepainter.h
src/matrix/: Makefile
src/matrix/logic/: arithmetic_ops.cpp  core.cpp  logic_ops.cpp  operators.cpp  s21_matrix.h
src/matrix/tests/: test_accessors.cpp  test_constructors.cpp  test_core.h  test_methods.cpp  test_operators.cpp
src/model/cave/: cave.cc  cave.h  cavepainter.cc  cavepainter.h
src/tests/: materials  test_cave.cc  test_core.cc  test_core.h  test_maze.cc
src/view/: animation.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  view_cave.cc
